# photo-batch

./: Args.h  ArgumentParser.cpp  ArgumentParser.h  CMakeLists.txt  ConvertMode.cpp  ConvertMode.h  Mode.cpp  Mode.h  ModesFactory.cpp  ModesFactory.h  PhotoBatch.cpp  README.md  RenameMode.cpp  RenameMode.h  ResizeMode.cpp  ResizeMode.h  STB.cpp  ScaleMode.cpp  ScaleMode.h  Utils.cpp  Utils.h
Tests/UnitTests/: CMakeLists.txt  TestArgumentParser.cpp  TestSum.cpp
